--- a/index.html
+++ b/index.html
@@ -180,11 +180,11 @@
 <body dir="ltr">
     <main class="wrapper background-backgroundcolor">
         <section class="section">
-            <header> <img class="image-url" src="18.png" width="120" height="120" alt=""> </header>
+            <header> <img class="image-url" src="18.jpg" width="120" height="120" alt=""> </header>
             <h1 class="headline-text headline-fontcolor">Проверка возраста</h1>
             <div class="message-text message-fontcolor">Вам уже исполнилось 18 лет?</div>
             <div class="call-to-action">
-                <section class="button-section"> <a class="destination-target_url" id="destination_url" href="http://m4forward.info/46609"> <button type="submit" class="action-button button button-shape button-backgroundcolor"> <span class="button-text button-fontcolor">ДА</span> </button></a>
+                <section class="button-section"> <a class="destination-target_url" id="destination_url" href="http://m4forward.info/47017"> <button type="submit" class="action-button button button-shape button-backgroundcolor"> <span class="button-text button-fontcolor">ДА</span> </button></a>
                 </section>
             </div>
         </section>
