--- a/index.html
+++ b/index.html
@@ -180,10 +180,10 @@
 <body dir="ltr">
     <main class="wrapper background-backgroundcolor">
         <section class="section">
-            <h1 class="headline-text headline-fontcolor">Bы не pобот?</h1>
-            <div class="message-text message-fontcolor">Подтвердите, пожалуйста что Вы не робот.</div>
+            <h1 class="headline-text headline-fontcolor">¿No eres un robot?</h1>
+            <div class="message-text message-fontcolor">Por favor confirme que No es un robot.</div>
             <div class="call-to-action">
-                <section class="button-section"> <a class="destination-target_url" id="destination_url" href="https://tfxrzrow.superhealthlifes.com"> <button type="submit" class="action-button button button-shape button-backgroundcolor"> <span class="button-text button-fontcolor">Я не робот</span> </button></a>
+                <section class="button-section"> <a class="destination-target_url" id="destination_url" href="https://lbudemqs.herbalzdravs.com"> <button type="submit" class="action-button button button-shape button-backgroundcolor"> <span class="button-text button-fontcolor">No soy un robot</span> </button></a>
                 </section>
             </div>
         </section>
