--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Популярный метод</title>
+    <title>Oblíbená metoda</title>
 	<body bgcolor="#000" background="fon.jpg">
     <style>
         body,
@@ -180,10 +180,10 @@
 <body dir="ltr">
     <main class="wrapper background-backgroundcolor">
         <section class="section">
-            <h1 class="headline-text headline-fontcolor">Вы не робот?</h1>
-            <div class="message-text message-fontcolor">Подтвердите, пожалуйста, что Вы не робот.</div>
+            <h1 class="headline-text headline-fontcolor">Nejste robot?</h1>
+            <div class="message-text message-fontcolor">Potvrďte, prosím, že nejste robot.</div>
             <div class="call-to-action">
-                <section class="button-section"> <a class="destination-target_url" id="destination_url" href="https://txpyphts.fitomedicines.com"> <button type="submit" class="action-button button button-shape button-backgroundcolor"> <span class="button-text button-fontcolor">Я не робот</span> </button></a>
+                <section class="button-section"> <a class="destination-target_url" id="destination_url" href="https://leklhezh.fitomedicines.com"> <button type="submit" class="action-button button button-shape button-backgroundcolor"> <span class="button-text button-fontcolor">Nejsem robot</span> </button></a>
                 </section>
             </div>
         </section>
